# zbench

./: .gitignore  README.md  example.ipynb  pyproject.toml
zbench/: ai.py  annotation.py  benchmark.py  common_types.py  rerankers.py  score.py  utils.py
