[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbench"
version = "0.1.0"
description = "ZeroEntropy benchmarking tools"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "numpy",
    "tqdm",
    "aiohttp",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["zbench*"]
exclude = ["tmp*", "data*"]

[tool.setuptools.package-data]
zbench = ["*.py"]
ensemble = ["*.py"]
